objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>OCFS Call Center Process</fullName>
        <description>OCFS Call Center Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>OCFS Call Center Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated to Supervisor</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Test</fullName>
        <description>Test</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DOH</fullName>
                </value>
                <value>
                    <fullName>OASAS</fullName>
                </value>
                <value>
                    <fullName>OCFS</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OFA</fullName>
                </value>
                <value>
                    <fullName>OPWDD</fullName>
                </value>
                <value>
                    <fullName>OTDA</fullName>
                </value>
                <value>
                    <fullName>OVS</fullName>
                </value>
                <value>
                    <fullName>WCB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Type of Caller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Claimant</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Family Member/All Other</fullName>
                </value>
                <value>
                    <fullName>Health Care Provider</fullName>
                </value>
                <value>
                    <fullName>Insurance Carrier</fullName>
                </value>
                <value>
                    <fullName>Record Retrieval</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulted_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>search for name of Supervisor, TRL, or other agent who consulted on this</inlineHelpText>
        <label>Consulted with...</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No active user found</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55 B/C</fullName>
                </value>
                <value>
                    <fullName>ACA Reporting</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>Employee Benefit Division (EBD)</fullName>
                </value>
                <value>
                    <fullName>Jobs/Merit</fullName>
                </value>
                <value>
                    <fullName>LEP</fullName>
                </value>
                <value>
                    <fullName>Adult Care Facilities (ACF)</fullName>
                </value>
                <value>
                    <fullName>Bureau of Narcotic Enforcement (BNE)</fullName>
                </value>
                <value>
                    <fullName>CEH-BTSA</fullName>
                </value>
                <value>
                    <fullName>COVID</fullName>
                </value>
                <value>
                    <fullName>DAVE</fullName>
                </value>
                <value>
                    <fullName>De-Authorized Providers</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Services (EMS)</fullName>
                </value>
                <value>
                    <fullName>Home Care-Hospice</fullName>
                </value>
                <value>
                    <fullName>Hospital Intake</fullName>
                </value>
                <value>
                    <fullName>Nursing Home Intake</fullName>
                </value>
                <value>
                    <fullName>OPMC</fullName>
                </value>
                <value>
                    <fullName>Organ Donor</fullName>
                </value>
                <value>
                    <fullName>Synthetic Drug</fullName>
                </value>
                <value>
                    <fullName>Vital Records</fullName>
                </value>
                <value>
                    <fullName>Veterans Clearing House</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
                <value>
                    <fullName>Impaired Driving Services</fullName>
                </value>
                <value>
                    <fullName>AIH</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BCR</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>Childcare Fraud Hotline</fullName>
                </value>
                <value>
                    <fullName>Child Care Stabilization</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 Resolution</fullName>
                </value>
                <value>
                    <fullName>Level 2 Transfer</fullName>
                </value>
                <value>
                    <fullName>L1 Resolution forwarded to LOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threat_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Threat Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verizon_Contact_Id__c</fullName>
        <description>Verizon call id number</description>
        <label>Verizon Contact Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voicemail</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>OCFS_Case</fullName>
        <active>true</active>
        <businessProcess>OCFS Call Center Support</businessProcess>
        <label>OCFS Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <businessProcess>OCFS Call Center Process</businessProcess>
        <label>test</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>